[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "experiment_runner"
version = "0.1"
description = "Library to manage stablebaselines3 experiments with optuna hyperparameter tunning"  # Optional, provide a brief description of your project
authors = [{ name = "Arnau Mayoral-Macau", email = "arnau.mayoral@iiia.csic.es" }]  # Optional
readme = "README.md"  # Optional
license = { file = "LICENSE" }  # Optional, update based on your actual license
requires-python = ">=3.10"  # Optional, adjust based on the minimum Python version you support

dependencies = [
    "gymnasium>=1.0.0",
    "matplotlib",
    "numpy",
    "torch>=2.6.0",
    "tensorboard",
    "optuna",
    "optuna-dashboard",
    "PyYAML",
    "stable_baselines3 @ git+https://github.com/maymac00/mo-stable-baselines3.git@c290795a38b1954b40d6384ea0a267ff790e1ce0"
]

[tool.setuptools.packages.find]
where = ["."]